third_party/move/tools/move-package-manifest/tests/dependencies/multiple-locations-1.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dependencies]
6 | a = { git = "https://github.com/a/b", local = "../a" }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dependency cannot have have multiple locations
7 |
  |
